# macsnow

./: .gitignore  1.XSNOW PRD.md  2.XSNOW ADD.md  3.MVP 0.1 IMPLEMENTATION PLAN.md  AGENTS.md  Package.swift  README.md  VERSION
.build/: debug
.build/arm64-apple-macosx/: debug
Resources/: AppIcon.icns
Scripts/: build_app_bundle.sh  build_dmg.sh  generate_app_icon.py
Sources/MacSnow/: AppDelegate.swift  AppVersion.swift  Diag.swift  DisplayController.swift  DisplayDetector.swift  DisplayIdentity.swift  MacSnowManager.swift  ReleaseOnlyBuild.swift  SettingsStore.swift  SnowScene.swift  StatusMenuController.swift  main.swift
Sources/Xsnow/: AppDelegate.swift  DisplayController.swift  OverlayWindow.swift  SettingsStore.swift  SnowScene.swift  StatusMenuController.swift  WindowCoordinateMapper.swift  WindowLayoutScanner.swift  XPMTextureCache.swift  XsnowManager.swift
plans/: 1.XSNOW PRD.md  2.XSNOW ADD.md  3.MVP 0.1 IMPLEMENTATION PLAN.md  4.MVP 1.1 VALIDATION PLAN.md  5.DISTRIBUTION CHECKLIST.md  6.MVP SPEC.md  7.PERFORMANCE LOG.md  8.Xsnow 최신본 3.9.1 기능 반영 계획.md  9. Tahoe 26.5에서 swift로 개발된 앱을 실행하면 상단 status bar에 아이콘....md  missing-statusbar-icon-spec.md
releases/: v1.21.78.body.md  v1.21.78.md
xsnow-org/xsnow-3.9.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  addcopyright.sh  bootdate  bootstrap  configure  configure.ac  dependencies  simplemake.sh
xsnow-org/xsnow-3.9.1/afterburner/: Makefile.am  Makefile.in
xsnow-org/xsnow-3.9.1/data/: Makefile.am  Makefile.in  xsnow.appdata.xml.in  xsnow.desktop.in
xsnow-org/xsnow-3.9.1/po/: Makevars  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  es.gmo  es.po  et.gmo  et.po  fi.gmo  fr.gmo  fr.po  hu.gmo  is.gmo  it.gmo  lt.gmo  lv.gmo  lv.po  nl.gmo  no.gmo  no.po  pl.gmo  pl.po  pt.gmo  pt.po  ro.gmo  ro.po  ru.gmo  sv.gmo  uk.gmo  uk.po  xsnow.pot
xsnow-org/xsnow-3.9.1/pofiles/: en.po  fi.po  hu.po  is.po  it.po  lt.po  nl.po  ru.po  sv.po
xsnow-org/xsnow-3.9.1/src/: Makefile.am  Makefile.in  Santa.c  Santa.h  aurora.c  aurora.h  birdglobals.h  birds.c  birds.h  blowoff.c  blowoff.h  buttons.h  clientwin.c  clientwin.h  clocks.c  clocks.h  csvpos.c  csvpos.h  debug.h  docs.c  docs.h  doit.h  doitb.h  dsimple.c  dsimple.h  fallensnow.c  fallensnow.h  flags.c  flags.h  gen_snow_includes.sh  gen_ui_xml.sh  gettext.h  hashtable.cpp  hashtable.h  ixpm.c  ixpm.h  kdtree.c  kdtree.h  loadmeasure.c  loadmeasure.h  (+57 more)
xsnow-org/xsnow-3.9.1/src/Pixmaps/: AltSanta1.xpm  AltSanta2.xpm  AltSanta3.xpm  AltSanta4.xpm  AltSantaRudolf1.xpm  AltSantaRudolf2.xpm  AltSantaRudolf3.xpm  AltSantaRudolf4.xpm  BigSanta1.xpm  BigSanta2.xpm  BigSanta3.xpm  BigSanta4.xpm  BigSanta81.xpm  BigSanta82.xpm  BigSanta83.xpm  BigSanta84.xpm  BigSantaRudolf1.xpm  BigSantaRudolf2.xpm  BigSantaRudolf3.xpm  BigSantaRudolf4.xpm  BigSantaRudolf81.xpm  BigSantaRudolf82.xpm  BigSantaRudolf83.xpm  BigSantaRudolf84.xpm  Makefile.am  Makefile.in  MediumSanta1.xpm  MediumSanta2.xpm  MediumSanta3.xpm  MediumSanta4.xpm  MediumSantaRudolf1.xpm  MediumSantaRudolf2.xpm  MediumSantaRudolf3.xpm  MediumSantaRudolf4.xpm  RegularSanta1.xpm  RegularSanta2.xpm  RegularSanta3.xpm  RegularSanta4.xpm  RegularSantaRudolf1.xpm  RegularSantaRudolf2.xpm  (+51 more)
